Avoid setting title line-height too low
To avoid vertical overflow/scrollbars

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -26,13 +26,8 @@ body {
 	font-size: var(--s4);
 }
 
-:is(h1, h2, h3, .font-title) {
+:is(h1, h2, h3) {
 	font-family: var(--font-title);
-	line-height: 1.1;
-}
-
-h1,
-h2,
-h3 {
+	line-height: 1.2;
 	text-shadow: var(--anaglyph);
 }
